--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,74 @@
 <!doctype html>
 <html lang="en" ng-app="storeApp">
-<head>
-  <meta charset="utf-8">
-  <title>My HTML File</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="css/app.css">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="js/controllers.js"></script>
-</head>
-<body ng-controller="GetBanners">
-
-	<ul>
-		<li ng-repeat="banner in banners">
-			<a href="{{ banner.link }}"><img src="{{ banner.image }}"></a>
-		</li>
-	</ul>
-
-</body>
+	<head>
+	  <meta charset="utf-8">
+	  <title>My HTML File</title>
+	  <!-- css -->
+	  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+	  <link rel="stylesheet" href="css/app.css">
+	  <link rel="stylesheet" href="css/helper.css">
+	  <link rel="stylesheet" href="css/home.css">
+	  <!-- js -->
+	  <script src="bower_components/angular/angular.js"></script>
+	  <script src="js/controllers.js"></script>
+	</head>
+	<body class="no-margin" ng-controller="GetBanners">
+		<!-- header -->
+		<div class="header">
+			<div class="container">
+				<div class="row header-content">
+					<div class="col-md-3 text-center">
+						<a href="/app"><img src="http://placehold.it/260x80/333333/ffffff/&amp;text=[Logo]"></a>
+					</div>
+					<div class="col-md-4 col-md-offset-1 header-section text-center">
+				    <div class="input-group">
+				      <input class="form-control" type="text" placeholder="Buscar" ng-model="query">
+				      <div class="input-group-addon"><i class="glyphicon glyphicon-search bold"></i></div>
+				    </div>
+					</div>
+					<div class="col-md-3 col-md-offset-1 header-section text-right">
+						<button type="button" class="btn btn-primary">Entrar / Registrate</button>
+					</div>
+				</div>
+			</div>
+			<hr>
+		</div>
+		<!-- Body -->
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<img src="http://placehold.it/1140x400/333333/ffffff/&amp;text=[Banners] Principal" style="width:100%">
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div class="col-md-12">
+					<div class="home-slide-promotions">
+						<ul>
+							<li ng-repeat="banner in banners">
+								<a href="{{ banner.link }}"><img src="{{ banner.image }}"></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div class="col-md-4">
+					<div class="bold text-center bg-gray home-articles-title">Ultimos visitados</div>
+					<img src="http://placehold.it/300x280/CCCCCC/000000/&amp;text=[Articulos]" style="width:100%">
+				</div>
+				<div class="col-md-8">
+					<div class="bold text-center bg-gray home-articles-title">Mas visitados</div>
+					<img src="http://placehold.it/630x280/CCCCCC/000000/&amp;text=[Articulos]" style="width:100%">
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div class="col-md-12">
+					<img src="http://placehold.it/1140x180/333333/ffffff/&amp;text=[Banners] Micrositios" style="width:100%">
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
